--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
     servlet:
       content-type: text/html
     cache: false
+  datasource:
+    url: jdbc:mysql://127.0.0.1:6033/mydb
+    username: root
+    password: 123456
 #亲测无效
 #  session:
 #    timeout: 60s
@@ -17,7 +21,7 @@ spring:
 server:
   servlet:
     session:
-      timeout: 60s
+      timeout: 15m
       cookie:
       #js脚本不能访问cookie
         http-only: true
